fix: use overflow hidden instead of btn border radius

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -1461,22 +1461,13 @@
   .nav .tabs-overflow .dropdown-menu {
     padding: #{tokens.$cds-global-space-0};
     box-shadow: #{tokens.$cds-alias-object-shadow-100};
+    overflow: hidden;
 
     .btn {
       line-height: #{baselinePx(20)};
       font-size: #{tokens.$cds-alias-typography-font-size-4};
       padding: #{tokens.$cds-global-space-5} #{tokens.$cds-global-space-6};
       border-radius: #{tokens.$cds-global-space-0};
-    }
-
-    .btn:first-of-type {
-      border-top-left-radius: #{tokens.$cds-alias-object-border-radius-100};
-      border-top-right-radius: #{tokens.$cds-alias-object-border-radius-100};
-    }
-
-    .btn:last-of-type {
-      border-bottom-left-radius: #{tokens.$cds-alias-object-border-radius-100};
-      border-bottom-right-radius: #{tokens.$cds-alias-object-border-radius-100};
     }
   }
 
